--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,7 @@
   margin-bottom: 0!important;
 }
 body {
-  background: #000428;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #004e92, #000428);  
-  background: linear-gradient(to right, #004e92, #000428); 
+  background: #F2F2F2;  /* fallback for old browsers */
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -33,7 +31,7 @@ header {
 h1 {
   font-family: 'Raleway', sans-serif;
   font-weight: 100;
-  color: white;
+  color: #00B2BD;
   text-align: center;
   font-size: 4.8rem!important;
 }
